infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  #this entire annotation section is what's going to help the ingress controller understand that we are  trying to feed it some routing rules so the ingress controller is going to continuously scan all the different objects or all the different config files
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
      # in development environment we have to configure this host
      # edit hosts file. C:\Windows\System32\Drivers\etc\hosts
    - host: talent.dev
      http:
        paths:
            # path should be same as routes defined inside auth -> index.js file
          - path: /api/employees/?(.*)
            backend:
              serviceName: employees-srv
              servicePort: 3000
          - path: /api/performances/?(.*)
            backend:
              serviceName: performances-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
